# ai-examples

./: .gitignore
a2a-examples/a2a_mcp/: pyproject.toml
a2a-examples/k8s_a2a_mcp/: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml
a2a-examples/k8s_a2a_mcp/agent_cards/: k8s_info_agent.json  log_analysis_agent.json  planner_agent.json
a2a-examples/k8s_a2a_mcp/src/k8s_debug/: __init__.py
a2a-examples/k8s_a2a_mcp/src/k8s_debug/agents/: __main__.py  k8s_info_agent.py  langgraph_planner_agent.py  orchestrator_agent.py
a2a-examples/k8s_a2a_mcp/src/k8s_debug/common/: agent_executor.py  prompts.py  types.py  utils.py  workflow.py
a2a-examples/k8s_a2a_mcp/src/k8s_debug/mcp/: client.py  server.py
a2a-examples/old.k8s_a2a_mc/: IMPLEMENTATION_GUIDE.md  MyREADME .md  __init__.py  main.py  pyproject.toml  setup.sh
a2a-examples/old.k8s_a2a_mc/agent_cards/: k8s_info_agent.json  log_analysis_agent.json
a2a-examples/old.k8s_a2a_mc/agents/: __init__.py  kubernetes_info_agent.py  log_analysis_agent.py  orchestrator_agent.py  user_agent.py
a2a-examples/old.k8s_a2a_mc/common/: agent_executor.py  types.py  workflow.py
a2a-examples/old.k8s_a2a_mc/kubernetes_mcp_server/: __init__.py  server.py
a2a-examples/old.k8s_a2a_mc/test/: create_crashloopbackoff_pod.yaml  run_full_test.py  test_system.py
a2a-examples/old.k8s_a2a_mc/utils/: __init__.py  config.py
mcp-examples/k8s-lister/: README.md  main.py  pyproject.toml  pyproject.toml.old
mcp-examples/mcp-client/: .env  README.md  client.py  pyproject.toml
mcp-examples/weather/: weather.py
(+13 files in other folders)
